# std-embedded-nal

./: .gitlab-ci.yml  Cargo.toml  NEWS.md  README.md
examples/: coapclient.rs  coapclient_async.rs  httpclient.rs
src/: conversion.rs  dns.rs  lib.rs  tcp.rs  udp.rs  udp_async.rs
std-embedded-nal-async/: Cargo.toml  NEWS.md  README.md
std-embedded-nal-async/examples/: coapclient.rs
std-embedded-nal-async/src/: conversion.rs  dns.rs  lib.rs  tcp.rs  udp.rs
std-embedded-nal-async/tests/: dns.rs  tcp_echo.rs  udp_echo.rs
tests/: integration.rs  udp_echo.rs  udp_echo_async.rs
