[package]
name = "std-embedded-nal"
version = "0.1.3"
authors = ["chrysn <chrysn@fsfe.org>"]
edition = "2018"

description = "Implementation of the `embedded-nal` traits for large devices that support the standard library"
categories = ["embedded", "hardware-support"]
keywords = ["network"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/chrysn/std-embedded-nal"

[dependencies]
embedded-nal = "0.6"
embedded-nal-async = { version = "0.1", optional = true }
async-std = { version = "1.12", optional = true }
# If enabled, these traits are implemented as well; they're experimental and
# will hopefully wind up in alter embedded-nal versions, so enabling this has
# no stability guarantees.
embedded-nal-tcpextensions = { version = "0.1", optional = true }

[features]
async = [ "embedded-nal-async", "async-std" ]

[dev-dependencies]
mio = { version = "0.8", features = [ "os-ext" ] }

[badges]
gitlab = { repository = "chrysn/std-embedded-nal" }
maintenance = { status = "experimental" }

[[example]]
name = "coapclient_async"
required-features = [ "async", "async-std/attributes" ]
