[package]
name = "std-embedded-nal"
version = "0.3.0"
authors = ["chrysn <chrysn@fsfe.org>"]
edition = "2021"

description = "Implementation of the `embedded-nal` traits for large devices that support the standard library"
categories = ["embedded", "hardware-support"]
keywords = ["network"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/chrysn/std-embedded-nal"

[dependencies]
embedded-nal = "0.9.0"

[dev-dependencies]
mio = { version = "0.8", features = [ "os-ext" ] }

[badges]
gitlab = { repository = "chrysn/std-embedded-nal" }
maintenance = { status = "experimental" }

[workspace.metadata.release]
sign-tag = true
